--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -29,7 +28,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- JUnit 4 dependency (for compatibility with JUnit 4 tests) -->
+        <!-- JUnit 4 dependency -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -40,7 +39,7 @@
 
     <build>
         <plugins>
-            <!-- Maven Surefire Plugin to run JUnit 5 tests -->
+            <!-- Maven Surefire Plugin to run JUnit 4 and JUnit 5 tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -50,8 +49,8 @@
                         <include>**/*Test.java</include>
                     </includes>
                     <dependenciesToScan>
-                        <dependency>junit-jupiter-api</dependency>
-                        <dependency>junit-jupiter-engine</dependency>
+                        <dependency>org.junit.jupiter:junit-jupiter-api</dependency>
+                        <dependency>org.junit.jupiter:junit-jupiter-engine</dependency>
                     </dependenciesToScan>
                 </configuration>
             </plugin>
