--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
     <groupId>org.example</groupId>
     <artifactId>TemperatureConverterExercise</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>Deposit</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
